Footer fixed to bottom of the page on mobile and desktop

--- a/components/header.module.css
+++ b/components/header.module.css
@@ -44,6 +44,7 @@
     font-size: 20px;
     position: relative;
     text-decoration: none;
+    letter-spacing: 2px;
 }
 
 
