--- a/components/projectview.module.css
+++ b/components/projectview.module.css
@@ -50,6 +50,7 @@
     background-color: whitesmoke;
     text-align: center;
     border: none;
+    text-align: left;
 }
 
 .cardsection3 {
